--- a/.classpath
+++ b/.classpath
@@ -31,6 +31,6 @@
 	<classpathentry exported="true" kind="lib" path="grddl-0.3/lib/saxon8.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-logging-1.1.1/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/htmlparser-1.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/java-rdfa-0.5-20100701.145737-3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/java-rdfa-0.5-20100701.145737-3.jar" sourcepath="lib/java-rdfa-0.5-20100701.145737-3-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
