Revision 1.0.3 - see changelog for changes

--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenCSV"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
