Intermediate checkin of version 1.1 changes.  See changlog for details

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -34,6 +34,7 @@ PROP_PROJECT_URI=ArtifactOfProjectURI:
 #SPDX Document Properties
 PROP_SPDX_VERSION=SPDXVersion: 
 PROP_SPDX_DATA_LICENSE=DataLicense: 
+PROP_SPDX_COMMENT=DocumentComment: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=Creator: 
@@ -62,6 +63,9 @@ PROP_PACKAGE_SUPPLIER=PackageSupplier:
 PROP_LICENSE_ID=LicenseID: 
 PROP_LICENSE_TEXT=licenseText: 
 PROP_EXTRACTED_TEXT=ExtractedText: 
+PROP_LICENSE_COMMENT=LicenseComment: 
+PROP_LICENSE_NAME=LicenseName: 
+PROP_SOURCE_URLS=CrossReference: 
 	
 #SPDX File Properties
 PROP_FILE_NAME=FileName: 
@@ -71,6 +75,7 @@ PROP_FILE_COPYRIGHT=FileCopyrightText:
 PROP_FILE_CHECKSUM=FileChecksum: SHA1: 
 PROP_FILE_SEEN_LICENSE=LicenseInfoInFile: 
 PROP_FILE_LIC_COMMENTS=LicenseComments: 
+PROP_FILE_COMMENT=FileComments: 
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=Reviewer: 
