--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -34,6 +34,7 @@ PROP_PROJECT_URI=\t\tArtifact of DOAP URI:
 #SPDX Document Properties
 PROP_SPDX_VERSION=Version: 
 PROP_SPDX_DATA_LICENSE=Data License: 
+PROP_SPDX_COMMENT=Document Comment: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=\t
@@ -62,6 +63,9 @@ PROP_PACKAGE_SUPPLIER=Supplier:
 PROP_LICENSE_ID=\tLicense ID: 
 PROP_LICENSE_TEXT=\tText: 
 PROP_EXTRACTED_TEXT=\tText: 
+PROP_LICENSE_COMMENT=\tComment: 
+PROP_LICENSE_NAME=\tLicense Name: 
+PROP_SOURCE_URLS=\tCross references: 
 PROP_NON_STANDARD_LICENSES=Non-Standard Licenses: 
 	
 #SPDX File Properties
@@ -72,6 +76,7 @@ PROP_FILE_COPYRIGHT=\tFile copyright:
 PROP_FILE_CHECKSUM=\tSHA1: 
 PROP_FILE_SEEN_LICENSE=\tLicense information from file: 
 PROP_FILE_LIC_COMMENTS=\tLicense comments: 
+PROP_FILE_COMMENT=\tFile comment: 
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=\t 
