--- a/.classpath
+++ b/.classpath
@@ -20,8 +20,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/grddl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/nekohtml.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi-3.5-FINAL-20090928.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-3.5-FINAL-20090928.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxon8.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
@@ -38,6 +36,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/OpenCSV"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-3.8-20120326.jar" sourcepath="lib-source/poi-src-3.8-20120326.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-3.8-20120326.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenCSV"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
