--- a/.classpath
+++ b/.classpath
@@ -17,7 +17,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jackson-mapper-asl-1.9.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-3.4-complete.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/BrowserLauncher2-10.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/grddl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/nekohtml.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxon8.jar"/>
@@ -38,7 +37,12 @@
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/poi-3.8-20120326.jar" sourcepath="lib-source/poi-src-3.8-20120326.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/dom4j-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-3.8-20120326.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-3.8-20120326.jar" sourcepath="lib-source/poi-src-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar" sourcepath="lib-source/commons-lang3-3.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/SPDXParser/lib-source/commons-lang3-3.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenCSV"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
