--- a/.classpath
+++ b/.classpath
@@ -26,7 +26,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/icu4j-3.4.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/iri-0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jena-2.6.3-tests.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jena-2.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jena-2.6.3.jar" sourcepath="lib-source/jena-2.6.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lucene-core-2.3.1.jar"/>
