--- a/.classpath
+++ b/.classpath
@@ -43,6 +43,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/SPDXParser/lib-source/commons-lang3-3.1-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/jsoup-1.7.2.jar" sourcepath="lib-source/jsoup-1.7.2-sources.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenCSV"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
