--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -40,6 +40,7 @@ PROP_SPDX_COMMENT=DocumentComment:
 PROP_CREATION_CREATOR=Creator: 
 PROP_CREATION_CREATED=Created: 
 PROP_CREATION_COMMENT=CreatorComment: 
+PROP_LICENSE_LIST_VERSION = LicenseListVersion: 
 	
 #SPDX Package Properties
 PROP_PACKAGE_DECLARED_NAME=PackageName: 
@@ -58,6 +59,7 @@ PROP_PACKAGE_LICENSE_COMMENT=PackageLicenseComments:
 PROP_PACKAGE_VERSION_INFO=PackageVersion: 
 PROP_PACKAGE_ORIGINATOR=PackageOriginator: 
 PROP_PACKAGE_SUPPLIER=PackageSupplier: 
+PROP_PACKAGE_HOMEPAGE_URL=PackageHomePage: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=LicenseID: 
@@ -76,6 +78,9 @@ PROP_FILE_CHECKSUM=FileChecksum: SHA1:
 PROP_FILE_SEEN_LICENSE=LicenseInfoInFile: 
 PROP_FILE_LIC_COMMENTS=LicenseComments: 
 PROP_FILE_COMMENT=FileComment: 
+PROP_FILE_DEPENDENCY=FileDependency: 
+PROP_FILE_CONTRIBUTOR=FileContributor: 
+PROP_FILE_NOTICE_TEXT=FileNotice: 
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=Reviewer: 
