--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -40,6 +40,7 @@ PROP_SPDX_COMMENT=Document Comment:
 PROP_CREATION_CREATOR=\t
 PROP_CREATION_CREATED=\t 
 PROP_CREATION_COMMENT=Creator comment: 
+PROP_LICENSE_LIST_VERSION = License List Version: 
 	
 #SPDX Package Properties
 PROP_PACKAGE_DECLARED_NAME=Package Name: 
@@ -58,6 +59,7 @@ PROP_PACKAGE_LICENSE_COMMENT=License comments:
 PROP_PACKAGE_VERSION_INFO=Version: 
 PROP_PACKAGE_ORIGINATOR=Originator: 
 PROP_PACKAGE_SUPPLIER=Supplier: 
+PROP_PACKAGE_HOMEPAGE_URL=Home Page: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=\tLicense ID: 
@@ -77,6 +79,10 @@ PROP_FILE_CHECKSUM=\tSHA1:
 PROP_FILE_SEEN_LICENSE=\tLicense information from file: 
 PROP_FILE_LIC_COMMENTS=\tLicense comments: 
 PROP_FILE_COMMENT=\tFile comment: 
+PROP_FILE_DEPENDENCY=\tFile Dependency: 
+PROP_FILE_CONTRIBUTOR=\tFile Contributor: 
+PROP_FILE_NOTICE_TEXT=\tNotice Text: 
+
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=\t 
