provide tools within org.spdx.tools namespace Signed-off-by: Roger Meier <r.meier@siemens.com>

--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.spdx.rdfparser.PrettyPrinter</mainClass>
+							<mainClass>org.spdx.tools.PrettyPrinter</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
