Prep for pushing update to Maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,15 @@
 		</license>
 	</licenses>
 	<url>http://spdx.org/tools</url>
+	<developers>
+	   <developer>
+	       <id>goneall</id>
+	       <name>Gary O'Neall</name>
+	       <email>gary@sourceauditor.com</email>
+	       <organization>SPDX</organization>
+	       <organizationUrl>http://spdx.org</organizationUrl>
+	   </developer>
+	</developers>
 	<organization>
 		<name>Linux Foundation</name>
 		<url>http://www.linuxfoundation.org</url>
@@ -231,4 +240,14 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<url>http://git.spdx.org/spdx-tools.git</url>
+		<connection>scm:git:ssh://git-spdx@git.spdx.org/spdx-tools.git</connection>
+		<developerConnection>scm:git:ssh://git-spdx@git.spdx.org/spdx-tools.git</developerConnection>
+	</scm>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>9</version>
+	</parent>
 </project>
