--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
 				<includes>
 					<include>NOTICE</include>
 					<include>LICENSE</include>
-					<include>README.txt</include>
+					<include>README.md</include>
 					<include>changelog</include>
 				</includes>
 			</resource>
