Completed tool to compare 2 docuements.  Merge utility and compare multiple documents utilities are both unstable with unit test failure (they need to be updated to handle multple packages per document).
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -25,6 +25,15 @@ LICENSE_INFO_HEADER=## License Information
 LICENSE_FROM_FILES_INFO_HEADER=
 PACKAGE_INFO_HEADER=## Package Information
 FILE_INFO_HEADER=## File Information
+ANNOTATION_HEADER=## Annotations
+RELATIONSHIP_HEADER=## Relationships
+EXTERNAL_DOC_REFS_HEADER=## External Document References
+
+# SPDX Element Property Names
+PROP_NAME=Name:
+
+# SPDX External Document References
+PROP_EXTERNAL_DOC_URI=
 	
 # DOAP Project Property Names
 PROP_PROJECT_NAME=ArtifactOfProjectName: 
@@ -35,6 +44,8 @@ PROP_PROJECT_URI=ArtifactOfProjectURI:
 PROP_SPDX_VERSION=SPDXVersion: 
 PROP_SPDX_DATA_LICENSE=DataLicense: 
 PROP_SPDX_COMMENT=DocumentComment: 
+PROP_DOCUMENT_NAME=DocumentName: 
+PROP_DOCUMENT_URI=DocumentID: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=Creator: 
