--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -25,6 +25,12 @@ LICENSE_INFO_HEADER=Non-Standard Licenses:
 LICENSE_FROM_FILES_INFO_HEADER=Licenses from files:
 PACKAGE_INFO_HEADER=
 FILE_INFO_HEADER=
+ANNOTATION_HEADER=Annotations:
+RELATIONSHIP_HEADER=Relationships:
+EXTERNAL_DOC_REFS_HEADER=External document references:
+
+# SPDX Element Property Names
+PROP_NAME=Name:
 	
 # DOAP Project Property Names
 PROP_PROJECT_NAME=\t\tArtifact of Project: 
@@ -35,6 +41,8 @@ PROP_PROJECT_URI=\t\tArtifact of DOAP URI:
 PROP_SPDX_VERSION=Version: 
 PROP_SPDX_DATA_LICENSE=Data License: 
 PROP_SPDX_COMMENT=Document Comment: 
+PROP_DOCUMENT_NAME=Document Name: 
+PROP_DOCUMENT_URI=Document URI: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=\t
