Completed SPDXViewer and SPDXToTag converter
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -30,10 +30,18 @@ RELATIONSHIP_HEADER=## Relationships
 EXTERNAL_DOC_REFS_HEADER=## External Document References
 
 # SPDX Element Property Names
-PROP_NAME=Name:
+PROP_NAME=Name: 
+PROP_ELEMENT_ID=SPDXID: 
 
 # SPDX External Document References
-PROP_EXTERNAL_DOC_URI=
+PROP_EXTERNAL_DOC_URI=ExternalDocumentRef: 
+
+# Annotation Properties
+PROP_ANNOTATOR=Annotator: 
+PROP_ANNOTATION_DATE=AnnotationDate: 
+PROP_ANNOTATION_COMMENT=Comment: 
+PROP_ANNOTATION_ID=SPDXID: 
+PROP_ANNOTATION_TYPE=AnnotationType: 
 	
 # DOAP Project Property Names
 PROP_PROJECT_NAME=ArtifactOfProjectName: 
@@ -46,6 +54,7 @@ PROP_SPDX_DATA_LICENSE=DataLicense:
 PROP_SPDX_COMMENT=DocumentComment: 
 PROP_DOCUMENT_NAME=DocumentName: 
 PROP_DOCUMENT_URI=DocumentID: 
+PROP_DOCUMENT_DESCRIBES=DocumentDescribes: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=Creator: 
@@ -55,8 +64,9 @@ PROP_LICENSE_LIST_VERSION = LicenseListVersion:
 	
 #SPDX Package Properties
 PROP_PACKAGE_DECLARED_NAME=PackageName: 
+PROP_PACKAGE_COMMENT=Comment: 
 PROP_PACKAGE_FILE_NAME=PackageFileName: 
-PROP_PACKAGE_CHECKSUM=PackageChecksum: SHA1: 
+PROP_PACKAGE_CHECKSUM=PackageChecksum:  
 PROP_PACKAGE_DOWNLOAD_URL=PackageDownloadLocation: 
 PROP_PACKAGE_SOURCE_INFO=PackageSourceInfo: 
 PROP_PACKAGE_DECLARED_LICENSE=PackageLicenseDeclared: 
@@ -85,7 +95,7 @@ PROP_FILE_NAME=FileName:
 PROP_FILE_TYPE=FileType: 
 PROP_FILE_LICENSE=LicenseConcluded: 
 PROP_FILE_COPYRIGHT=FileCopyrightText: 
-PROP_FILE_CHECKSUM=FileChecksum: SHA1: 
+PROP_FILE_CHECKSUM=FileChecksum: 
 PROP_FILE_SEEN_LICENSE=LicenseInfoInFile: 
 PROP_FILE_LIC_COMMENTS=LicenseComments: 
 PROP_FILE_COMMENT=FileComment: 
