--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -30,7 +30,18 @@ RELATIONSHIP_HEADER=Relationships:
 EXTERNAL_DOC_REFS_HEADER=External document references:
 
 # SPDX Element Property Names
-PROP_NAME=Name:
+PROP_NAME=Name: 
+PROP_ELEMENT_ID=ID: 
+
+# SPDX External Document References
+PROP_EXTERNAL_DOC_URI=
+
+# Annotation Properties
+PROP_ANNOTATOR=\tAnnotator: 
+PROP_ANNOTATION_DATE=\tDate: 
+PROP_ANNOTATION_COMMENT=\tComment: 
+PROP_ANNOTATION_ID=\tID: 
+PROP_ANNOTATION_TYPE=\tAnnotation Type:  
 	
 # DOAP Project Property Names
 PROP_PROJECT_NAME=\t\tArtifact of Project: 
@@ -43,6 +54,7 @@ PROP_SPDX_DATA_LICENSE=Data License:
 PROP_SPDX_COMMENT=Document Comment: 
 PROP_DOCUMENT_NAME=Document Name: 
 PROP_DOCUMENT_URI=Document URI: 
+PROP_DOCUMENT_DESCRIBES=Describes SPDX ID's: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=\t
@@ -52,8 +64,9 @@ PROP_LICENSE_LIST_VERSION = License List Version:
 	
 #SPDX Package Properties
 PROP_PACKAGE_DECLARED_NAME=Package Name: 
+PROP_PACKAGE_COMMENT=Comment: 
 PROP_PACKAGE_FILE_NAME=File name: 
-PROP_PACKAGE_CHECKSUM=SHA1: 
+PROP_PACKAGE_CHECKSUM=
 PROP_PACKAGE_DOWNLOAD_URL=SPDX Document for :
 PROP_PACKAGE_SOURCE_INFO=Additional Information: 
 PROP_PACKAGE_DECLARED_LICENSE=License declared: 
@@ -83,7 +96,7 @@ PROP_FILE_NAME=File Name:
 PROP_FILE_TYPE=\tFile Type: 
 PROP_FILE_LICENSE=\tConcluded license: 
 PROP_FILE_COPYRIGHT=\tFile copyright: 
-PROP_FILE_CHECKSUM=\tSHA1: 
+PROP_FILE_CHECKSUM=\t
 PROP_FILE_SEEN_LICENSE=\tLicense information from file: 
 PROP_FILE_LIC_COMMENTS=\tLicense comments: 
 PROP_FILE_COMMENT=\tFile comment: 
