Completed TagToRDF translator.  Could use more testing, especially with the new 2.0 properties
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -42,6 +42,10 @@ PROP_ANNOTATION_DATE=AnnotationDate:
 PROP_ANNOTATION_COMMENT=Comment: 
 PROP_ANNOTATION_ID=SPDXID: 
 PROP_ANNOTATION_TYPE=AnnotationType: 
+
+# Relationship
+PROP_RELATIONSHIP=Relationship: 
+PROP_RELATIONSHIP_COMMENT=RelationshipComment: 
 	
 # DOAP Project Property Names
 PROP_PROJECT_NAME=ArtifactOfProjectName: 
