--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -36,6 +36,10 @@ PROP_ELEMENT_ID=ID:
 # SPDX External Document References
 PROP_EXTERNAL_DOC_URI=
 
+# Relationship
+PROP_RELATIONSHIP=\tRelationship: 
+PROP_RELATIONSHIP_COMMENT=\t\t
+
 # Annotation Properties
 PROP_ANNOTATOR=\tAnnotator: 
 PROP_ANNOTATION_DATE=\tDate: 
