Updated to latest spec. Implemented origins sheet for spreadsheet tools
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -57,7 +57,7 @@ PROP_SPDX_VERSION=Version:
 PROP_SPDX_DATA_LICENSE=Data License: 
 PROP_SPDX_COMMENT=Document Comment: 
 PROP_DOCUMENT_NAME=Document Name: 
-PROP_DOCUMENT_URI=Document URI: 
+PROP_DOCUMENT_NAMESPACE=Document Namespace: 
 PROP_DOCUMENT_DESCRIBES=Describes SPDX ID's: 
 	
 #SPDX CreationInfo Properties
