--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -22,7 +22,7 @@
 CREATION_INFO_HEADER=## Creation Information
 REVIEW_INFO_HEADER=## Review Information
 LICENSE_INFO_HEADER=## License Information
-LICENSE_FROM_FILES_INFO_HEADER=
+LICENSE_FROM_FILES_INFO_HEADER=## License information from files
 PACKAGE_INFO_HEADER=## Package Information
 FILE_INFO_HEADER=## File Information
 ANNOTATION_HEADER=## Annotations
@@ -57,8 +57,7 @@ PROP_SPDX_VERSION=SPDXVersion:
 PROP_SPDX_DATA_LICENSE=DataLicense: 
 PROP_SPDX_COMMENT=DocumentComment: 
 PROP_DOCUMENT_NAME=DocumentName: 
-PROP_DOCUMENT_NAMESPACE=DocumentID: 
-PROP_DOCUMENT_DESCRIBES=DocumentDescribes: 
+PROP_DOCUMENT_NAMESPACE=DocumentNamespace: 
 	
 #SPDX CreationInfo Properties
 PROP_CREATION_CREATOR=Creator: 
