--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,12 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>10.0.1</version>
+			<version>16.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.spullara.mustache.java</groupId>
-			<artifactId>builder</artifactId>
-			<version>0.6.3</version>
+			<artifactId>compiler</artifactId>
+			<version>0.7.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
