--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+  		<profile>
+    			<id>doclint-java8-disable</id>
+    			<activation>
+      				<jdk>[1.8,)</jdk>
+    			</activation>
+    			<properties>
+      				<javadoc.opts>-Xdoclint:none</javadoc.opts>
+    			</properties>
+  		</profile>
+	</profiles>
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>Test</testSourceDirectory>
@@ -246,6 +258,9 @@
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
+						<configuration>
+            						<additionalparam>${javadoc.opts}</additionalparam>
+          					</configuration>
 						<goals>
 							<goal>jar</goal>
 						</goals>
