Fixing critical bug in spreadsheet verification
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,16 @@
         <connection>scm:git:ssh://git-spdx@git.spdx.org/spdx-tools.git</connection>
         <developerConnection>scm:git:ssh://git-spdx@git.spdx.org/spdx-tools.git</developerConnection>
     </scm>
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-    </parent>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+	    <repository>
+	        <id>ossrh</id>
+	        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	    </repository>
+    </distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
