Fix bug when comparing complex license expressions and flattened expressions contain a duplicate term
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 
 notifications:
-  email: false
+  email: 
+    recipients:
+      - gary@sourceauditor.com
+    on_success: change
+    on_failure: always
 
