Added external reference types per the 2.1 spec
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -84,6 +84,7 @@ PROP_PACKAGE_VERSION_INFO=PackageVersion:
 PROP_PACKAGE_ORIGINATOR=PackageOriginator: 
 PROP_PACKAGE_SUPPLIER=PackageSupplier: 
 PROP_PACKAGE_HOMEPAGE_URL=PackageHomePage: 
+PROP_PACKAGE_FILES_ANALYZED=FilesAnalyzed: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=LicenseID: 
