--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -84,6 +84,7 @@ PROP_PACKAGE_VERSION_INFO=Version:
 PROP_PACKAGE_ORIGINATOR=Originator: 
 PROP_PACKAGE_SUPPLIER=Supplier: 
 PROP_PACKAGE_HOMEPAGE_URL=Home Page: 
+PROP_PACKAGE_FILES_ANALYZED=Files Analyzed: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=\tLicense ID: 
