Fix unit test failure and add Snippet to tag/value parser
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -106,6 +106,19 @@ PROP_FILE_COMMENT=FileComment:
 PROP_FILE_DEPENDENCY=FileDependency: 
 PROP_FILE_CONTRIBUTOR=FileContributor: 
 PROP_FILE_NOTICE_TEXT=FileNotice: 
+
+# Snippet Properties
+PROP_SNIPPET_SPDX_ID=SnippetSPDXID: 
+PROP_SNIPPET_FROM_FILE_ID=SnippetFromFileSPDXID: 
+PROP_SNIPPET_BYTE_RANGE=SnippetByteRange: 
+PROP_SNIPPET_LINE_RANGE=SnippetLineRange: 
+PROP_SNIPPET_CONCLUDED_LICENSE=SnippetLicenseConcluded: 
+PROP_SNIPPET_LIC_COMMENTS=SnippetLicenseComments: 
+PROP_SNIPPET_COPYRIGHT=SnippetCopyrightText: 
+PROP_SNIPPET_COMMENT=SnippetComment: 
+PROP_SNIPPET_NAME=SnippetName: 
+PROP_SNIPPET_SEEN_LICENSE=LicenseInfoInSnippet: 
+
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=Reviewer: 
