--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -108,6 +108,8 @@ PROP_FILE_DEPENDENCY=\tFile Dependency:
 PROP_FILE_CONTRIBUTOR=\tFile Contributor: 
 PROP_FILE_NOTICE_TEXT=\tNotice Text: 
 
+# Snippet Properties
+
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=\t 
