Tag parser updated for SPDX 2.1
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -85,6 +85,8 @@ PROP_PACKAGE_ORIGINATOR=Originator:
 PROP_PACKAGE_SUPPLIER=Supplier: 
 PROP_PACKAGE_HOMEPAGE_URL=Home Page: 
 PROP_PACKAGE_FILES_ANALYZED=Files Analyzed: 
+PROP_EXTERNAL_REFERENCE=External Reference: 
+PROP_EXTERNAL_REFERENCE_COMMENT=\tReference Comment:  
 	
 #SPDX License Properties
 PROP_LICENSE_ID=\tLicense ID: 
@@ -109,7 +111,16 @@ PROP_FILE_CONTRIBUTOR=\tFile Contributor:
 PROP_FILE_NOTICE_TEXT=\tNotice Text: 
 
 # Snippet Properties
-
+PROP_SNIPPET_SPDX_ID=Snippet ID: 
+PROP_SNIPPET_FROM_FILE_ID=\tSnippet from File ID: 
+PROP_SNIPPET_BYTE_RANGE=\tSnippet Byte Range: 
+PROP_SNIPPET_LINE_RANGE=\tSnippet Line Range: 
+PROP_SNIPPET_CONCLUDED_LICENSE=\tConcluded license: 
+PROP_SNIPPET_LIC_COMMENTS=\tLicense comments: 
+PROP_SNIPPET_COPYRIGHT=\tFile copyright: 
+PROP_SNIPPET_COMMENT=\tSnippet comment: 
+PROP_SNIPPET_NAME=\tSnippet name: 
+PROP_SNIPPET_SEEN_LICENSE=\tLicense information from snippet: 
 	
 #SPDX Review Properties
 PROP_REVIEW_REVIEWER=\t 
