--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -85,6 +85,8 @@ PROP_PACKAGE_ORIGINATOR=PackageOriginator:
 PROP_PACKAGE_SUPPLIER=PackageSupplier: 
 PROP_PACKAGE_HOMEPAGE_URL=PackageHomePage: 
 PROP_PACKAGE_FILES_ANALYZED=FilesAnalyzed: 
+PROP_EXTERNAL_REFERENCE=ExternalRef: 
+PROP_EXTERNAL_REFERENCE_COMMENT=ExternalRefComment: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=LicenseID: 
