Update RdfToTag and SPDXViewer for 2.1
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxTagValueConstants.properties
+++ b/src/org/spdx/tag/SpdxTagValueConstants.properties
@@ -28,6 +28,7 @@ FILE_INFO_HEADER=## File Information
 ANNOTATION_HEADER=## Annotations
 RELATIONSHIP_HEADER=## Relationships
 EXTERNAL_DOC_REFS_HEADER=## External Document References
+SNIPPET_HEADER=## Snippet Information
 
 # SPDX Element Property Names
 PROP_NAME=Name: 
