--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -28,6 +28,7 @@ FILE_INFO_HEADER=
 ANNOTATION_HEADER=Annotations:
 RELATIONSHIP_HEADER=Relationships:
 EXTERNAL_DOC_REFS_HEADER=External document references:
+SNIPPET_HEADER=
 
 # SPDX Element Property Names
 PROP_NAME=Name: 
