--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
 
+jdk:
+  - oraclejdk8
+
 notifications:
   email: 
     recipients:
       - gary@sourceauditor.com
+      - ybronshteyn@blackducksoftware.com
     on_success: change
     on_failure: always
 
