--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.spdx</groupId>
 	<artifactId>spdx-tools</artifactId>
-	<version>2.1.4-SNAPSHOT</version>
+	<version>2.1.5-SNAPSHOT</version>
 	<name>SPDX tools</name>
 	<description>SPDX tools</description>
 	<licenses>
@@ -253,28 +253,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>org.spdx.tools.Main</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id> <!-- this is used for inheritance merges -->
-						<phase>package</phase> <!-- bind to the packaging phase -->
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.2.1</version>
@@ -307,6 +285,50 @@
 					</execution>
 				</executions>
 			</plugin>
+				<plugin>
+        			<groupId>org.apache.maven.plugins</groupId>
+        			<artifactId>maven-shade-plugin</artifactId>
+        			<configuration>
+          				<shadedArtifactAttached>true</shadedArtifactAttached>
+          				<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+          				<transformers>
+            				<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              					<mainClass>org.spdx.tools.Main</mainClass>
+            				</transformer>
+            				<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+            				<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+            				<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+              					<addHeader>false</addHeader>
+              				</transformer>
+          				</transformers>
+          				<filters>
+          					<filter>
+          						<!--  Conflict with HTMLParser 1.4 -->
+          						<artifact>com.yevster.net.rootdev:java-rdfa</artifact>
+          						<excludes>
+          							<exclude>nu/validator/htmlparser/**</exclude>
+          						</excludes>
+          					</filter>
+            				<filter>
+              					<artifact>*:*</artifact>
+              					<excludes>
+                					<exclude>META-INF/*.SF</exclude>
+                					<exclude>META-INF/*.DSA</exclude>
+                					<exclude>META-INF/*.RSA</exclude>
+              					</excludes>
+            				</filter>
+          				</filters>
+        			</configuration>
+        			<executions>
+          				<execution>
+            				<phase>package</phase>
+            				<!--<phase /><!- - Switch off -->
+            				<goals>
+              					<goal>shade</goal>
+            				</goals>
+          				</execution>
+        			</executions>
+      			</plugin>
 		</plugins>
 	</build>
 	<reporting>
