--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
+			<version>8.7</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
