--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,11 @@
 		<developerConnection>scm:git:ssh://git@github.com:spdx/tools.git</developerConnection>
 	</scm>
 	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
+			<id>bintray-spdx-spdx-tools</id>
+			<name>spdx-spdx-tools</name>
+        <url>https://api.bintray.com/maven/spdx/spdx-tools/spdx-tools-java/;publish=1</url>
+    </repository>
 	</distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
