Add gpg signing to the POM file for easier deployment
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -376,14 +376,30 @@ This license is based on the Apache Software License, version 1.1.</extractedTex
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>verify</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
-			
+		    <plugin>
+      			<groupId>org.apache.maven.plugins</groupId>
+      			<artifactId>maven-gpg-plugin</artifactId>
+      			<version>1.6</version>
+      			<executions>
+        			<execution>
+          				<id>sign-artifacts</id>
+          				<phase>verify</phase>
+          				<goals>
+            				<goal>sign</goal>
+          				</goals>
+          				<configuration>
+              				<keyname>${gpg.keyname}</keyname>
+              				<passphraseServerId>${gpg.keyname}</passphraseServerId>
+            			</configuration>
+        			</execution>
+      			</executions>
+    		</plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-javadoc-plugin</artifactId>
