Move the gpg-signing plugin inside a profile 'gpg-signing' to allow the maven build to execute sucessfully in environments where gpg is not installed or configured
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,31 @@
 				<javadoc.opts>-Xdoclint:none</javadoc.opts>
 			</properties>
 		</profile>
+		<profile>
+			<id>gpg-signing</id>
+			<build>
+				<plugins>
+					<plugin>
+		      			<groupId>org.apache.maven.plugins</groupId>
+		      			<artifactId>maven-gpg-plugin</artifactId>
+		      			<version>1.6</version>
+		      			<executions>
+		        			<execution>
+		          				<id>sign-artifacts</id>
+		          				<phase>verify</phase>
+		          				<goals>
+		            				<goal>sign</goal>
+		          				</goals>
+		          				<configuration>
+		              				<keyname>${gpg.keyname}</keyname>
+		              				<passphraseServerId>${gpg.keyname}</passphraseServerId>
+		            			</configuration>
+		        			</execution>
+		      			</executions>
+	    			</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<build>
@@ -382,24 +407,6 @@ This license is based on the Apache Software License, version 1.1.</extractedTex
 					</execution>
 				</executions>
 			</plugin>
-		    <plugin>
-      			<groupId>org.apache.maven.plugins</groupId>
-      			<artifactId>maven-gpg-plugin</artifactId>
-      			<version>1.6</version>
-      			<executions>
-        			<execution>
-          				<id>sign-artifacts</id>
-          				<phase>verify</phase>
-          				<goals>
-            				<goal>sign</goal>
-          				</goals>
-          				<configuration>
-              				<keyname>${gpg.keyname}</keyname>
-              				<passphraseServerId>${gpg.keyname}</passphraseServerId>
-            			</configuration>
-        			</execution>
-      			</executions>
-    		</plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-javadoc-plugin</artifactId>
