Add local cache of JSON-LD schema
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,18 @@
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
 			<version>4.7.1.201706071930-r</version>
+			<exclusions>
+		   <!--Conflict with Jena - use a later version -->
+				<exclusion>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+				</exclusion>
+    		</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
