--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.3</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
