--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.spdx</groupId>
 	<artifactId>spdx-tools</artifactId>
-	<version>2.1.17</version>
+	<version>2.1.18</version>
 	<name>SPDX tools</name>
 	<description>SPDX tools</description>
 	<licenses>
@@ -41,19 +41,12 @@
 	</distributionManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jena.version>3.10.0</jena.version>
+		<jena.version>3.12.0</jena.version>
 	</properties>
 	<dependencies>
 		<!-- JENA -->
 		<dependency>
-		<!-- Force the dependency version greater or equal to 0.11.0 for Jena - resolves vulnerability -->
-			<groupId>org.apache.thrift</groupId>
-			<artifactId>libthrift</artifactId>
-			<version>0.12.0</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-		<!-- Force the dependency version to 2.9.8 for Jena - resolves vulnerability -->
+		<!-- Force the dependency version to 2.9.8 so the JSON-LD will work. This can be removed once https://github.com/jsonld-java/jsonld-java/commit/0f251f203649a04faf053c52beddab1d8865be5b is released -->
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.8</version>
