Add attributionText to SpdxItem
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/src/org/spdx/tag/SpdxViewerConstants.properties
+++ b/src/org/spdx/tag/SpdxViewerConstants.properties
@@ -88,6 +88,7 @@ PROP_PACKAGE_HOMEPAGE_URL=Home Page:
 PROP_PACKAGE_FILES_ANALYZED=Files Analyzed: 
 PROP_EXTERNAL_REFERENCE=External Reference: 
 PROP_EXTERNAL_REFERENCE_COMMENT=\tReference Comment:  
+PROP_PACKAGE_ATTRIBUTION_TEXT=Attribution Text: 
 	
 #SPDX License Properties
 PROP_LICENSE_ID=\tLicense ID: 
@@ -110,6 +111,7 @@ PROP_FILE_COMMENT=\tFile comment:
 PROP_FILE_DEPENDENCY=\tFile Dependency: 
 PROP_FILE_CONTRIBUTOR=\tFile Contributor: 
 PROP_FILE_NOTICE_TEXT=\tNotice Text: 
+PROP_FILE_ATTRIBUTION_TEXT=\tAttribution Text: 
 
 # Snippet Properties
 PROP_SNIPPET_SPDX_ID=Snippet ID: 
