--- a/pom.xml
+++ b/pom.xml
@@ -374,7 +374,8 @@ This license is based on the Apache Software License, version 1.1.</extractedTex
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
-					<quiet>true</quiet>				
+					<quiet>true</quiet>
+					<source>8</source>		
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 				<executions>
