--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<version>3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
@@ -154,6 +159,11 @@
 			<groupId>com.github.cliftonlabs</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-validator</groupId>
+		    <artifactId>commons-validator</artifactId>
+		    <version>1.6</version>
 		</dependency>
 	</dependencies>
 	<profiles>
