--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.spdx</groupId>
 	<artifactId>spdx-tools</artifactId>
-	<version>2.2.2</version>
+	<version>2.2.3-SNAPSHOT</version>
 	<name>SPDX tools</name>
 	<description>SPDX tools</description>
 	<licenses>
@@ -429,20 +429,20 @@ This license is based on the Apache Software License, version 1.1.</extractedTex
           				</execution>
         			</executions>
       			</plugin>
-      			<plugin>
-			        <groupId>org.apache.maven.plugins</groupId>
-			        <artifactId>maven-source-plugin</artifactId>
-			        <version>3.2.1</version>
-			        <executions>
-			          <execution>
-			            <id>attach-sources</id>
-			            <phase>verify</phase>
-			            <goals>
-			              <goal>jar-no-fork</goal>
-			            </goals>
-			          </execution>
-			        </executions>
-			      </plugin>
+		   	<plugin>
+		      <groupId>org.apache.maven.plugins</groupId>
+		      <artifactId>maven-source-plugin</artifactId>
+		      <version>3.2.1</version>
+		      <executions>
+		        <execution>
+		          <id>attach-sources</id>
+		          <phase>verify</phase>
+		          <goals>
+		            <goal>jar-no-fork</goal>
+		          </goals>
+		        </execution>
+		      </executions>
+		    </plugin>
 		</plugins>
 	</build>
 	<reporting>
