Update POM file to deploy to sonatype
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 	</scm>
 	<distributionManagement>
 		<repository>
-			<id>bintray-spdx-spdx-tools</id>
+			<id>ossrh</id>
 			<name>spdx-spdx-tools</name>
-        <url>https://api.bintray.com/maven/spdx/spdx-tools/spdx-tools-java/;publish=1</url>
+        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
 	</distributionManagement>
 	<properties>
